Trying a fix for background-attachment:fixed to work better on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,9 +3,22 @@
 body {
     line-height: 1.8;
     color: white;   
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../../media/images/vegetables.jpg") no-repeat center center fixed;
-    background-size: cover;
-    height: 100vh;
+}
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../../media/images/vegetables.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 p {
